--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fetch_fe_exercise",
+  "homepage": "https://justcasuallyjames.github.io/fetch_fe_exercise",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,12 +14,14 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
